RESOLVED FIXED129765
Crash when copying content that contains <sup>
https://bugs.webkit.org/show_bug.cgi?id=129765
Summary Crash when copying content that contains <sup>
Enrica Casucci
Reported 2014-03-05 17:37:54 PST
This issue is easily reproducible on wikipedia.org. Select some text that contains footnotes (like [1]) that are implemented with <sup> tags. Copy. Safari crashes. <rdar://problem/16139498>
Attachments
Patch (1.35 KB, patch)
2014-03-05 17:41 PST, Enrica Casucci
no flags
Patch with ChangeLog (1.95 KB, patch)
2014-03-05 17:42 PST, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-03-05 17:41:05 PST
Enrica Casucci
Comment 2 2014-03-05 17:42:13 PST
Created attachment 225930 [details] Patch with ChangeLog
Enrica Casucci
Comment 3 2014-03-05 17:46:32 PST
Committed revision 165154.
Note You need to log in before you can comment on or make changes to this bug.