Crash when copying content that contains <sup>. https://bugs.webkit.org/show_bug.cgi?id=129765 <rdar://problem/16139498>

Reviewed by Benjamin Poulain.

Adding static definition of NSAttributeSuperscriptName.

* platform/mac/HTMLConverter.mm:



Canonical link: https://commits.webkit.org/147801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165154 268f45cc-cd09-0410-ab3c-d52691b4dbfc